fixed mines texture, fixed fullscreen and multiple moving added